<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MedParliament</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="googleKey">AIzaSyAHeP_-hQvSMWDTi2RKTTszwKSptcml4iI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_Version">App Version 0.0.1</string>
    <string name="Login_with_Google">Login with Google</string>
    <string name="Email__Mobile_No">Email / Mobile No</string>
    <string name="Login">Login</string>
    <string name="interest">  I want to Register</string>
    <string name="Forgot_password">Forgot password ?</string>
    <string name="nopost">No Data yet !!</string>
    <string name="nothread">No Thread yet !!</string>
    <string name="Know_Med">Login / Sign Up</string>
    <string name="complete">Complete Your Profile</string>
    <string name="Enter_Med">Enter MedParliament</string>
    <string name="From">From</string>
    <string name="TO">To</string>
<!--    <string name="RazorKey">rzp_test_4u8muzEpnmCqNG</string>-->
    <string name="RazorKey">rzp_live_OsvYv63WTYaI4c</string>
    <string name="Write">Write To MedParliament</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="Password">Password</string>
    <string name="Get_Started">Get Started</string>
    <string name="text_Login_SignUp">  the Global Parliament of
Healthcare Leadership </string>
    <string name="Signup">Sign up</string>
    <string name="Title_Here">Title Here</string>
    <string name="MED_PARLIAMENT">MedParliament</string>
    <string name="selectType">Select Type</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome To MedParliament</string>
    <string name="PostDetails">Post Details</string>
    <string name="Write_Your_Post">Write to MedParliament </string>
    <string name="Write_Your_Reply">Write Your Reply</string>
    <string name="Type_Description">Share your views...</string>
    <string name="ttt">Please select the type you
want to sign up as</string>
    <string name="Students">Students</string>
    <string name="Doctor">Doctors</string>
    <string name="Product_Management_Fundamentals">Product Management
Fundamentals</string>
    <string name="t1">Lorem ipsum, or lipsum as it is sometimes known, is
dummy text used in laying out print, graphic or web designs.
The passage is attributed to an</string>
    <string name="Professionals">Professionals</string>
    <string name="asProfessionals">As Professionals</string>
    <string name="Information">Brief Information</string>
    <string name="Entrepreneur">Entrepreneur</string>
    <string name="Policy_Maker">Policy Maker</string>
    <string name="As_Entreprenuer">As Entrepreneur</string>
    <string name="ENROLL">ENROLL</string>
    <string name="Length">Length</string>
    <string name="Institutions_">Institutions</string>
    <string name="Effort">Effort</string>
    <string name="Language">Language</string>
    <string name="Price">Price</string>
    <string name="highlighted_initiative">Highlighted Initiative</string>
    <string name="Video_Transcript">Video
Transcript</string>
    <string name="Level">Level</string>
    <string name="Institutions">Institutions</string>
    <string name="Subject">Subject</string>
    <string name="As_Policy_Maker">As Policy Maker</string>
    <string name="As_Doctor">As Doctor</string>
    <string name="Name">Name</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Country">Country</string>
    <string name="Designation">Designation</string>
    <string name="Mobile_No">Mobile No</string>
    <string name="email">Email Id</string>
    <string name="Up_Skill_Academy">Academic Council</string>
    <string name="Med_Street">Med Street</string>
    <string name="Market_Insights">Fact And Impact</string>
    <string name="Public_forum">Public Affairs</string>
    <string name="MedAchieversTv">MedAchievers.TV</string>
    <string name="Institute_Name">Institute Name</string>
    <string name="University_name">University name</string>
    <string name="My_Profile">My Profile</string>
    <string name="gender">Gender</string>
    <string name="University_Address">University Address</string>
    <string name="MEDPARLIAMNET">MED PARLIAMENT</string>
    <string name="Area_of_Activity">Area of Activity</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Profile_Category">Profile Category</string>
    <string name="OR">OR</string>
    <string name="Interests">Interests </string>
    <string name="As_Student">As Student</string>
    <string name="Address">Address</string>
    <string name="forwhat">Select For What</string>
    <string name="Qualification">Qualification</string>
    <string name="Institution_Name">Institution Name</string>
    <string name="Batch_of_Qualification">Batch of Qualification</string>
    <string name="University">University</string>
    <string name="AnInitiativeOf">An Initiative Of </string>
    <string name="Others">Others</string>
    <string name="Save">Save</string>
    <string name="Latest_News">News</string>
    <string name="Latest_Video">MedAchievers.TV</string>
    <string name="promissing_initiative">Highlighted Initiatives</string>
    <string name="Define_in_200_words">Define in 200 words</string>
    <string name="Annoucements">Announcements</string>
    <string name="Organisation">Organisation</string>
    <string name="About_Your_Profile">About Your Profile</string>
    <string name="Home">Home</string>
    <string name="Addressofjospital">Address of Hospital</string>
    <string name="CompanyAddress">Company Address</string>
    <string name="AreaofExperites">Area of Expertise</string>
    <string name="Occupation">Occupation</string>
    <string name="company">Name of the company</string>
    <string name="company_address">Address of the company</string>

    <string name="institute">Hospital/Health institute where practising</string>
    <string name="hos_add">Address of the hospital</string>
    <string name="veiw"><u>View more >>></u></string>
    <string name="Event">Events</string>
    <string name="Read">Read more...</string>
    <string name="Gallery">Gallery</string>
    <string name="userName">UserName</string>
    <string name="MedParliament">MedParliament</string>
    <string name="Login_signup">Login/Signup</string>
    <string name="AboutUs">About Us</string>
    <string name="Our_Partners">Our Partners</string>
    <string name="text"><string name="invite_default_msg">Hey there, Let\'s join one of the best healthcare community which connects everyone from Students to Entrepreneurs to Doctors to Decision makers which leads towards "Globalization and Transformation of Healthcare".  Download the App Now </string></string>
    <string name="Letgestarted">Let\'s get started</string>
    <string name="Donthaveanaccount">Don\'t have an account ?</string>
    <string name="Rate_Now">Rate Now</string>
    <string name="MY_POST">Inbox</string>
    <string name="yes">Yes</string>
    <string name="skip">Skip</string>
    <string name="News">News</string>
    <string name="Comapny_Name">Company Name</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Global_Leadership">Global Parliament of Healthcare Leadership</string>
    <string name="title">Title</string>
    <string name="NewsDetails">News Details</string>
    <string name="msg">Message</string>
    <string name="ok">Ok</string>
    <string name="No">No</string>
    <string name="Comments">Comments</string>
    <string name="AllPost">Sent</string>
    <string name="AllPostDetails">Posts Details</string>
    <!--    <string name="ForgotPassword">Forgot Password</string>-->
    <!--    <string name="Continue">Continue</string>-->
    <!--    <string name="Forgot1">Please enter your registered email id to reset-->
    <!--your password</string>-->
    <!--    <string name="Email">E-mail Id</string>-->
    <!--    <string name="OTP">Enter OTP</string>-->
    <!--    <string name="DontGet">Didn\'t get OTP ?</string>-->
    <!--    <string name="Resend">Resend OTP</string>-->
    <!--    <string name="ResetPassword">Reset Password</string>-->


    <string name="ForgotPassword">Forgot Password</string>
    <string name="Continue">Continue</string>
    <string name="Forgot1">Please enter your registered email id to reset
your password</string>
    <string name="Email">E-mail Id</string>
    <string name="Featured_Programme">Featured Programme</string>
    <string name="Top_Rate_Programme">Top Rated Programme</string>
    <string name="OTP">Enter OTP</string>
    <string name="DecisionMaker">As Decision Maker</string>
    <string name="DM">Decision Maker</string>
    <string name="HallGallery"> Hall Of Moment </string>
    <string name="DontGet">Didn\'t get OTP ?</string>
    <string name="Resend">Resend OTP</string>
    <string name="GlobalInitiatives">Global Initiatives</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="done3">Password Changed Successfully</string>
    <string name="done2">Go to Login</string>
    <string name="Promising_Initiative">Promising Initiative </string>
    <string name="Gender">Gender</string>

    <string name="newPassword">New Password</string>
    <string name="Conform">Conform Password</string>
    <string name="enter">Enter your New Password</string>


    ///////////////////////////////////////////////////////////
    <color name="done">#a2834d</color>
    <color name="text2">#d3d3d2</color>

    ////instagram
    <string name="client_id">your_client_id</string>
    <string name="callback_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="post1">Post</string>
    <string name="Add">Add Your Views...</string>
    <string name="Notifications">Notifications</string>

    <string name="title_activity_video_viewer">VideoViewerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
