<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgot_bck"
    tools:context=".Activity.OTP_Activity">

    <RelativeLayout
        android:id="@+id/rel_for"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#071930">

        <ImageButton
            android:id="@+id/bck"
            android:layout_width="50dp"
            android:padding="15dp"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:background="@color/transparent"
            android:src="@drawable/ic_back">

        </ImageButton>

        <com.medparliament.Widget.Segow_UI_Bold_Font
            android:layout_toRightOf="@+id/bck"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:lineHeight="17dp"
            android:text="@string/Forgot_password"
            >
        </com.medparliament.Widget.Segow_UI_Bold_Font>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/rel_for"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/sim_txt"
        android:layout_below="@id/rel_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.medparliament.Widget.Segow_UI_Font
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#d3d3d2"
            android:layout_marginTop="16dp"
            android:paddingLeft="31dp"
            android:paddingRight="35dp"
            android:textSize="13dp"
            android:text="@string/Forgot1">

        </com.medparliament.Widget.Segow_UI_Font>

    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/sim_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edittop"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="12dp"
        android:id="@+id/l6"
        android:orientation="vertical">
        <com.medparliament.Widget.Segow_UI_Font
            android:layout_width="match_parent"
            android:textSize="@dimen/edittextsize"
            android:paddingLeft="10dp"
            android:text="@string/OTP"
            android:id="@+id/l_University_address"
            android:textColor="#d3d3d2"
            android:layout_height="wrap_content">
        </com.medparliament.Widget.Segow_UI_Font>
        <com.medparliament.Widget.otpEditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:layout_marginTop="30dp"
            android:inputType="number"
            android:textColor="@color/white"
            android:layout_marginLeft="28.5dp"
            android:layout_marginRight="28.5dp"
            android:maxLength="4"
            android:textIsSelectable="false"
            android:textSize="20sp">
        </com.medparliament.Widget.otpEditText>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/top"
            android:layout_marginHorizontal="10dp"
            android:background="@color/edithintColor">
        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/l6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="28dp"
        android:orientation="horizontal">

        <com.medparliament.Widget.Segow_UI_Font
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="#d3d3d2" android:gravity="center"
        android:textSize="13dp"
        android:text="@string/DontGet">

    </com.medparliament.Widget.Segow_UI_Font>

        <com.medparliament.Widget.Segow_UI_Font
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#c99734"
            android:textSize="13dp"
            android:layout_marginLeft="6dp"
            android:text="@string/Resend">

        </com.medparliament.Widget.Segow_UI_Font>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reset_password"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/ResetPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bbb"
        android:textColor="@color/white"
        android:layout_marginBottom="136dp"
        android:textAllCaps="false">
    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>