<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activity.Login_Signup_Activity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg1"
        android:scaleType="centerCrop">
    </ImageView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/ttt"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/group_"
                android:layout_marginTop="30dp"
                android:scaleType="centerInside"
                android:id="@+id/cop">
            </ImageView>
            <com.example.medparliament.Widget.Segow_UI_Semi_Font
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MEDPARLIAMNET"
                android:layout_below="@+id/cop"
                android:textAlignment="gravity"
                android:textSize="22dp"
                android:visibility="gone"
                android:id="@+id/t1"
                android:textColor="@color/white"
                android:gravity="center_horizontal">
            </com.example.medparliament.Widget.Segow_UI_Semi_Font>
            <com.example.medparliament.Widget.Segow_UI_Semi_Font
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_below="@+id/t1"
                android:textAlignment="gravity"
                android:layout_marginTop="100dp"
                android:textSize="22dp"
                android:id="@+id/t2"
                android:textColor="@color/textcolor"
                android:gravity="center_horizontal">
            </com.example.medparliament.Widget.Segow_UI_Semi_Font>
            <com.example.medparliament.Widget.Segow_UI_Font
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/t2"
                android:paddingHorizontal="@dimen/fieldHeight"
                android:text="@string/text_Login_SignUp"
                android:textAlignment="gravity"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:gravity="center_horizontal">
            </com.example.medparliament.Widget.Segow_UI_Font>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="60dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/img"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="@dimen/fieldHeight"
                    android:background="@color/transparent"
                    android:weightSum="2"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fieldHeight"
                        android:text="@string/Login"
                        android:background="@drawable/rounded_btn_bodr"
                        android:textColor="@color/white"
                        android:layout_margin="10dp"
                        android:textAllCaps="false">
                    </androidx.appcompat.widget.AppCompatButton>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signup"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/fieldHeight"
                        android:background="@drawable/transparent"
                        android:text="@string/Signup"
                        android:textAllCaps="false"
                        android:layout_margin="10dp"
                        android:textColor="@color/white">
                    </androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
</RelativeLayout>