<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <com.medparliament.Widget.Segow_UI_Bold_Font
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16dp"
            android:textColor="@color/colorAccent"
            android:text="@string/Batch_of_Qualification"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:orientation="vertical">
            <com.medparliament.Widget.Segow_UI_Semi_Font
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/From"
                android:textSize="16dp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:id="@+id/t1">
            </com.medparliament.Widget.Segow_UI_Semi_Font>
            <NumberPicker
                android:layout_marginTop="5dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:theme="@style/DefaultNumberPickerTheme"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorAccent"
                android:id="@+id/number1"
                android:layout_height="120dp">
            </NumberPicker>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.medparliament.Widget.Segow_UI_Semi_Font
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TO"
                    android:textSize="16dp"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:id="@+id/t2">
                </com.medparliament.Widget.Segow_UI_Semi_Font>
                <NumberPicker
                    android:layout_marginTop="5dp"
                    android:id="@+id/number2"
                    android:paddingRight="20dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="20dp"
                    android:theme="@style/DefaultNumberPickerTheme"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp">
                </NumberPicker>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/fieldHeight"
        android:background="@color/white"
        android:weightSum="2"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yes"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fieldHeight"
            android:text="@string/ok"
            android:background="@drawable/popup_btn_border"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</LinearLayout>